Updates for java 1.8